fixing card size on mobile

--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -41,6 +41,8 @@
       margin-top: 10%;
     }
   }
+  
+
   .card-container {
     color: white;
     font-family: "Montserrat", sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -127,6 +129,27 @@
     }
   }
 }
-
-
+@media(max-width: 600px) {
+  .Contact{
+    padding:1rem;
+    .card-container {
+      max-width: 300px;
+    }
+    .card-img{
+      width: 90%;
+      height: 90%;
+      min-height: 20%;
+      min-width: 30%;
+      padding: 5px;
+      justify-content: center;
+      align-items: flex-start;
+      overflow: hidden;
+      object-fit: cover;
+      border-radius: 50%;
+      display: inline-block;
+      vertical-align: middle;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.7);
+    }
+  }
+}
 
